# amr

./: .gitignore  GUI.py  README.md  burger.yaml  rtabmap.launch.py  test_voice.py
YOLO/pointcloud_crop/: CMakeLists.txt  package.xml
YOLO/pointcloud_crop/config/: filter_config.yaml
YOLO/pointcloud_crop/src/: pointcloud_crop.cpp
YOLO/yolo/: package.xml
YOLO/yolo/yolo/: yolo_publisher.py
YOLO/yolo_launcher/: package.xml
YOLO/yolo_launcher/launch/: yolo_launcher.launch.py
YOLO/yolo_msgs/: CMakeLists.txt
YOLO/yolo_msgs/msg/: InferenceArray.msg  InferenceResult.msg
arduino_control/: arduino_control.ino
files_from_other_packages/: camera_launch.launch.py  lifecycleshutdown.txt  map.launch.py  modified_rtabmap.launch.py  modified_ukf.yaml  nav.launch.py  nav2_params.yaml  param_copy.txt  rtabmap.launch.py  ukf.yaml
launch/: CMakeLists.txt  package.xml
launch/config/: nav2_params.yaml  nav2_params_mvi.yaml  nav2_params_original.yaml  nav2_yolo_params.yaml  nav2_yolo_params_lab.yaml  nav2_yolo_params_lib.yaml
launch/launch/: map.launch.py  nav.launch.py  nav_simple_commander.launch.py  nav_yolo.launch.py  start_nav.launch.py
launch/simple_commander/: fifth_point.py  first_point.py  fourth_point.py  lab_night.py  lab_static.py  lib1_straight.py  lib2_turn.py  lib3.py  lib3_door.py  lib4_rack.py  lib5_waypoint.py  lvl1_lab.py  mvi_lab.py  origin.py  second_point.py  somac.py  third_point.py
launch/simple_commander/lab_test/: design.py  mvi.py  plc.py  robotics.py
lidar_rotator/: package.xml  setup.cfg  setup.py
lidar_rotator/lidar_rotator/: lidar_rotator.py
my_bot/config/: controllers.yaml  mapper_params_online_async.yaml  my_bot.rviz  my_controllers.yaml  nav2_params.yaml
my_bot/description/: camera.xacro  depth_camera copy.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  realsense_camera.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  test_lidar.xacro  test_robot.urdf.xacro  top.xacro  wheels.xacro
my_bot/launch/: launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py  test_launch_sim.launch.py  test_rsp.launch.py
my_bot/worlds/: obstacle.world
odom_rotator/: package.xml  setup.cfg  setup.py
odom_rotator/odom_rotator/: odom_rotator.py
serial_test/: package.xml  setup.py
serial_test/serial_test/: serial_test.py
venv_run/kokoro/: kokoro_launcher.py  test_voice.py
voice_control/: package.xml  setup.py  test.py  voice_control.py  voice_subscriber.py  whisper_voice_control.py
voice_control/voice_control/: gpt_voice_control.py  port.txt  test2.py
yolo/: setup.py
yolo/yolo/: yes.txt  yolo_publisher.py  yolo_subscriber.py
yolo_costmap_package/: CMakeLists.txt  package.xml  yolo_layer.xml
yolo_costmap_package/include/yolo_costmap_package/: yolo_layer.hpp
yolo_costmap_package/src/: yolo_layer.cpp
yolo_launcher/: CMakeLists.txt
yolo_launcher/launch/: yolo_launcher.launch.py
yolo_msgs/: CMakeLists.txt  package.xml
