<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_costmap_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wobblywulf@gmail.com">heisenburg</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  <costmap_2d plugin="${prefix}/yolo_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
