<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_crop</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wobblywulf@gmail.com">heisenburg</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>    <!-- for pcl_conversions -->
  <depend>pcl_ros</depend>            <!-- ROS-PCL integration -->
  <depend>pcl_msgs</depend>           <!-- message types, if needed -->
  <depend>yolo_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
